--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="ured">
         <div class="text">Pozdrav text text text text text text text text text text text text</div>
         <div class="but">
-            <button class="y"><a class="y" href="da.html">Yes</a></button>
+            <button class="y"><a class="y" href="yes.html">Yes</a></button>
             <button class="n"><a class="n" href="ne.html">No</a></button>
         </div>
     </div>
